--- a/src/assets/scss/reviews.module.scss
+++ b/src/assets/scss/reviews.module.scss
@@ -3,60 +3,54 @@
   padding: 12px;
   max-width: 884px;
   width: 100%;
-}
-.review {
-  padding: 0;
-  position: relative;
-  margin-bottom: 16px;
-  border: 1px solid var(--grey);
-  background-color: var(--white);
-  color: var(--black);
-  transition: 0.2s all;
-}
-
-.content {
-  padding: 20px 26px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  > *:last-child {
-    min-width: 80px;
+  &__review {
+    padding: 0;
+    position: relative;
+    margin-bottom: 16px;
+    border: 1px solid var(--grey);
+    background-color: var(--white);
+    color: var(--black);
+    transition: 0.2s all;
+    &__content {
+      padding: 20px 26px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      > *:last-child {
+        min-width: 80px;
+      }
+      &__name {
+        font-size: 18px;
+        line-height: 28px;
+        font-weight: 600;
+        margin-bottom: 5px;
+      }
+      &__comment {
+        margin: 0;
+        font-size: 16px;
+        line-height: 24px;
+      }
+    }
   }
-}
-
-.name {
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-.comment {
-  margin: 0;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 @media all and (max-width: 767px) {
-  .content {
+  .reviews__review__content {
     padding: 12px 16px;
-  }
-
-  .rate {
-    position: absolute;
-    top: 10px;
-    right: 16px;
-  }
-
-  .name {
-    font-size: 16px;
-    line-height: 24px;
-    margin-bottom: 10px;
-  }
-
-  .comment {
-    font-size: 14px;
-    line-height: 20px;
+    &__rate {
+      position: absolute;
+      top: 10px;
+      right: 16px;
+    }
+    &__name {
+      font-size: 16px;
+      line-height: 24px;
+      margin-bottom: 10px;
+    }
+    &__comment {
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
 }
