--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   --white: #ffffff;
   --orange: #e4661e;
   --orange-light: #f0894e;
+  --red: red;
+  --red-light: #e3242b;
   --pink: #fff0db;
   --yellow: #f0ad4e;
   --yellow-light: #ffd25d;
