--- a/src/assets/scss/reviewForm.module.scss
+++ b/src/assets/scss/reviewForm.module.scss
@@ -6,9 +6,33 @@
   position: relative;
   margin-bottom: 0;
   padding: 20px 26px;
+  &__title {
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 16px;
+    font-weight: 600;
+  }
   &__item {
      margin-bottom: 5px;
-   }
+  }
+  &__message {
+    max-width: 70%;
+    width: 100%;
+  }
+  &__rate {
+    > span {
+      display: inline-block;
+      vertical-align: middle;
+      line-height: 1;
+      &:first-child {
+        margin-right: 8px;
+      }
+    }
+  }
+  &__publish {
+    margin-top: 16px;
+    max-width: 320px;
+  }
 }
 
 .rateWrap {
@@ -18,51 +42,17 @@
   white-space: nowrap;
 }
 
-.rateWrap > span {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 1;
-}
-
-.rateWrap > span:first-child {
-  margin-right: 8px;
-}
-
-.addReviewTitle {
-  font-size: 18px;
-  line-height: 28px;
-  margin-bottom: 16px;
-  font-weight: 600;
-}
-
-.message {
-  max-width: 70%;
-  width: 100%;
-}
-
-.publish {
-  margin-top: 16px;
-  max-width: 320px;
-}
-
-.submitButton:hover {
-  border-color: var(--yellow-light);
-  opacity: 0.8;
-}
-
 @media all and (max-width: 767px) {
-  .message {
-    max-width: none;
-  }
-
   .reviewForm {
     margin-bottom: 60px;
     padding: 12px 16px;
-  }
-
-  .addReviewTitle {
-    font-size: 16px;
-    line-height: 28px;
-    margin-bottom: 10px;
+    &__message {
+      max-width: none;
+    }
+    &__title {
+      font-size: 16px;
+      line-height: 28px;
+      margin-bottom: 10px;
+    }
   }
 }
