--- a/src/assets/scss/common/button.module.scss
+++ b/src/assets/scss/common/button.module.scss
@@ -21,6 +21,11 @@
     border-color: var(--yellow-light);
     background-color: var(--yellow-light);
   }
+  &:disabled {
+    border-color: var(--orange-light);
+    background-color: var(--orange-light);
+    cursor: unset;
+  }
   + .button {
     margin-left: 1px;
   }
